--- a/src/components/TodoTasks.css
+++ b/src/components/TodoTasks.css
@@ -2,7 +2,7 @@
 .todoTasks{
     position: relative;
     width: 100%;
-    min-height: 300px;
+    min-height: 50px;
 }
 
 .todoTasksLine{
@@ -18,7 +18,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    min-height: 250px;
+    min-height: 100px;
 }
 
 .oneTask{
@@ -26,9 +26,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 32px;
+    margin-top: 16px;
     width: calc(100% - 200px);
-    min-height: 50px;
+}
+
+.oneTask:last-child{
+    margin-bottom: 32px;
 }
 
 .oneTask:first-child{
@@ -39,9 +42,11 @@
     position: relative;
     min-height: 100%;
     width: 100%;
+    padding-right: 10px;
     display: flex;
     justify-content: start;
     align-items: center;
+    word-break: break-all;
 }
 
 .taskText h3{
